added portfolio functionality
