# backend/server/htttp_server.go
@@ -22,26 +22,24 @@ func (s *server) mapRoutes() {
 	s.echo.POST("api/auth/sign-up", s.authController.SignUp)
 	s.echo.POST("api/auth/sign-in", s.authController.SignIn)
 	signOut.POST("", s.authController.SignOut)
+
 	s.echo.GET("/api/jobs/:jobId", s.jobController.GetJobById)
 	s.echo.GET("/api/jobs/search", s.jobController.SearchJobs)
 	s.echo.POST("/api/jobs/filter", s.jobController.GetJobsByFilters)
+
 	jobsWithAuth := s.echo.Group("/api/jobs", s.middleware.AuthMiddleware)
 	jobsWithAuth.POST("", s.jobController.CreateJob)
 	jobsWithAuth.PUT("/:jobId", s.jobController.UpdateJob)
+
 	applications := s.echo.Group("/api/applications", s.middleware.AuthMiddleware)
 	applications.POST("", s.jobApplicationController.CreateApplication)
 	applications.PUT("/:applicationId/status", s.jobApplicationController.UpdateApplicationStatus)
 	applications.DELETE("/:applicationId", s.jobApplicationController.DeleteApplication)
 
-	// s.echo.POST("api/auth/sign-in", s.authController.SignInWithWallet)
-	// s.echo.POST("api/auth/verify-signature", s.authController.VerifySignature)
-	// s.echo.POST("api/auth/refresh-tokens", s.authController.RefreshTokens)
-
-	// authGroup := s.echo.Group("api/auth", s.middleware.AuthMiddleware)
-	// authGroup.POST("/sign-out", s.authController.SignOut)
-	// authGroup.POST("/change-role", s.authController.ChangeRole)
-
-	// s.echo.POST("api/auth/verify-token", s.authController.VerifyToken)
+	portfolios := s.echo.Group("/api/portfolios")
+	portfolios.POST("", s.portfolioController.CreatePortfolio, s.middleware.AuthMiddleware)
+	portfolios.POST("/:portfolioId/items", s.portfolioController.AddPortfolioItems, s.middleware.AuthMiddleware)
+	portfolios.GET("/student/:studentId", s.portfolioController.GetPortfolioByStudent)
 
 	s.echo.GET("/swagger/*", echoSwagger.WrapHandler)
 }
